Changes to Index and style

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aneri Moradia - Frontend Developer</title>
     <meta name="description" content="Aneri Moradia's personal portfolio website showcasing projects and skills as a Frontend Developer."> 
-
+    <link rel="stylesheet" href="styles/style.css">
     <!-- Google Fonts -->
      <link rel="preconnect" href="https://fonts.googleapis.com"/>
      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
@@ -17,7 +17,7 @@
 
     <header class="site-header">
         <div class="brand">
-            <img src="assets/avatar.svg" alt="Aneri Moradia Logo" class="avatar"/>
+            <img src="assets/avatar.png" alt="Aneri Moradia Logo" class="avatar"/>
             <span>Aneri Moradia</span>
         </div>
         <nav class="site-nav" aria-label="Primary">
@@ -36,7 +36,7 @@
     
     <!-- Hero -->
      <section class="hero">
-        <h1>Frontend Develoepr</h1>
+        <h1>Aneri Moradia - Full Stack Developer</h1>
         <p>HTML - only portfolio with proper layout and semantics</p>
      </section>
 
@@ -46,22 +46,22 @@
 
             <!-- Projects -->
             <article class="card">
-                <img src="assets/project1.png" alt="Screenshot of Project 1"/>
+                <img src="assets/project1.jpg" alt="Screenshot of Project 1"/>
                 <h2>Project 1</h2>
                 <p>Description of Project 1.</p>
             </article>
             <article class="card">
-                <img src="assets/project2.png" alt="Screenshot of Project 2"/>
+                <img src="assets/project2.jpg" alt="Screenshot of Project 2"/>
                 <h2>Project 2</h2>
                 <p>Description of Project 2.</p>
             </article>
             <article class="card">
-                <img src="assets/project3.png" alt="Screenshot of Project 3"/>
+                <img src="assets/project3.jpg" alt="Screenshot of Project 3"/>
                 <h2>Project 3</h2>
                 <p>Description of Project 3.</p>
             </article>
             <article class="card">
-                <img src="assets/project4.png" alt="Screenshot of Project 4"/>
+                <img src="assets/project4.jpg" alt="Screenshot of Project 4"/>
                 <h2>Project 4</h2>
                 <p>Description of Project 4.</p>
             </article>
@@ -82,7 +82,7 @@
                         Contributed to various open source projects on GitHub.
                     </p>
                     <p>
-                        <a href="#">GitHib Profile</a>
+                        <a href="#">GitHub Profile</a>
                     </p>
                 </section>
              </article>
